Update service and courses

--- a/index.html
+++ b/index.html
@@ -1153,7 +1153,7 @@ g { color: Gray }
 <strong>GPHY4553</strong> &mdash; Introduction to Seismology <em>(2022S)</em> <br />
 <strong>GPHY6970</strong> &mdash; Machine Learning in Geosciences Seminar <em>(2021F; Co-Instructor)</em> <br />
 <strong>GPHY5970</strong> &mdash; Geophysical Journal Seminar <em>(2022S, 2022F, 2023F)</em> <br />
-<strong>GPHY3440</strong> &mdash; Mentored Research Experience <em>(2021S, 2022Su)</em> </p>
+<strong>GPHY3440</strong> &mdash; Mentored Research Experience <em>(2021S, 2022Su, 2023F)</em> </p>
 
 <p><font size="4.5"><strong>Lower Undergraduate Level Courses</strong></font></p>
 
