--- a/service/index.html
+++ b/service/index.html
@@ -427,7 +427,7 @@
           <h1 itemprop="name">Professional Service</h1>
 
           <div class="article-style" itemprop="articleBody">
-            <p><font size="4"><strong>University of Oklahoma (OU) &ndash; Mewborne College of Earth and Energy (MCEE)</strong> </font></p>
+            <p><font size="4.5"><strong>University of Oklahoma (OU) &ndash; Mewborne College of Earth and Energy (MCEE)</strong> </font></p>
 
 <p>2022&ndash; &emsp; Faculty Liaison, <a href="https://www.agu.org/bridge-program" target="_blank">American Geophysical Union (AGU) Bridge Program</a> <br />
 2021&ndash; &emsp; Member, <a href="https://www.ou.edu/mcee/about/diversity" target="_blank">MCEE Diversity, Equity, and Inclusion (DEI) Council</a> <br />
@@ -441,18 +441,19 @@
 <p>2021&ndash; &emsp; Member, Teaching Evaluation Committee <br />
 2021&ndash; &emsp; Member, Student Awards Committee <br />
 2020&ndash; &emsp; Member, Graduate Admission &amp; Affairs Committee <br />
-2021&ndash; &emsp; Member, OU Reflection Seismology Centennial Committee <br />
 2021S &emsp; Member and DEI Advocate, Environmental Geophysics Search Committee <br />
 2020F &emsp; Member, Petroleum Geosciences Vision Committee </p>
 
-<p><font size="4"><strong>Broader Communities</strong></font></p>
+<p><font size="4.5"><strong>Broader Communities</strong></font></p>
 
-<p>2017&ndash; &emsp; Co-Leader (with <a href="https://ix.cs.uoregon.edu/~bae/" target="_blank">Brittany Erickson</a> and <a href="https://vlambert.github.io/" target="_blank">Valère Lambert</a>), Community Code Verification Initiative <a href="https://strike.scec.org/cvws/seas/index.html" target="_blank">SEAS (Sequences of Earthquakes and Aseismic Slip)</a> <br />
-2022&ndash; &emsp; Faculty Mentor, <a href="https://www.aapigeosci.org/" target="_blank">Asian Americans and Pacific Islanders in Geosciences (AAPIiG)</a> Mentoring Pod Program</p>
+<p>2017&ndash;2023 &emsp; Co-Leader (with <a href="https://ix.cs.uoregon.edu/~bae/" target="_blank">Brittany Erickson</a> and <a href="https://vlambert.github.io/" target="_blank">Valère Lambert</a>), Community Code Verification Initiative <a href="https://strike.scec.org/cvws/seas/index.html" target="_blank">SEAS (Sequences of Earthquakes and Aseismic Slip)</a> <br />
+2022&ndash;2023 &emsp; Faculty Mentor, <a href="https://www.aapigeosci.org/" target="_blank">Asian Americans and Pacific Islanders in Geosciences (AAPIiG)</a> Mentoring Pod Program</p>
 
-<p>Reviewer for proposals: NSF (ad hoc &amp; panel), NASA (panel) and USGS (panel) </p>
+<p><strong>Reviewer for proposals</strong>:  <br />
+National Science Foundation (NSF), National Aeronautics and Space Administration (NASA), United States Geological Survey (USGS), American Chemical Society Petroleum Research Fund (ACS PRF), Dutch Research Council (NWO), German Research Foundation (DFG) </p>
 
-<p>Reviewer for journals: Geophysical Research Letters, Journal of Geophysical Research - Solid Earth, Geophysical Journal International, Earth and Planetary Science Letters, Scientific Reports, Bulletin of the Seismological Society of America, Seismological Research Letters, Earth Planets and Space, Earth and Space Science, Pure and Applied Geophysics, Tectonophysics, Remote Sensing, Geosciences, Energies, Sensors, Earthquake Science, etc.</p>
+<p><strong>Reviewer for journals</strong>: <br />
+Science, Science Advances, Geophysical Research Letters, Journal of Geophysical Research - Solid Earth, Geophysical Journal International, Earth and Planetary Science Letters, Scientific Reports, Bulletin of the Seismological Society of America, Seismological Research Letters, Earth Planets and Space, Earth and Space Science, Pure and Applied Geophysics, Tectonophysics, Remote Sensing, Geosciences, Energies, Sensors, Earthquake Science, etc.</p>
 
           </div>
 
