--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
     
 
     <div class="portrait-title">
-      <h2>Jaqueline Silva</h2>
+      <h2>Jacqueline Silva</h2>
       <h3>EarthScope Intern; BS Geology, UTEP (2024 Summer)</h3>
       <p class="people-interests">GPS Monitoring of Aquifers and Geothermal Fields</p>
     </div>
