Update CV and courses

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
           
         
         <li>
-          <a itemprop="sameAs" href="/files/CV_Jiang_202404.pdf" >
+          <a itemprop="sameAs" href="/files/CV_Jiang_202408.pdf" >
             <i class="ai ai-cv big-icon"></i>
           </a>
         </li>
@@ -1171,13 +1171,13 @@
       <!-- raw HTML omitted -->
 <!-- raw HTML omitted -->
 <p><!-- raw HTML omitted --><strong>Graduate / Upper Undergraduate Level Courses</strong><!-- raw HTML omitted --></p>
-<p><strong>GPHY5020</strong> &mdash; Computational Geophysics <em>(2021S, 2023S)</em><br>
+<p><strong>GPHY5020</strong> &mdash; Computational Geophysics <em>(2021S, 2023S, 2025S)</em><br>
 <strong>GPHY5970</strong> &mdash; Remote Sensing &amp; Space Geodesy <em>(2021F, 2023F)</em><br>
 <strong>GPHY5413</strong> &mdash; Global Geophysics <em>(2022F, 2023F, 2024F)</em><br>
 <strong>GPHY4553</strong> &mdash; Introduction to Seismology <em>(2022S)</em><br>
 <strong>GPHY6970</strong> &mdash; Machine Learning in Geosciences Seminar <em>(2021F; Co-Instructor)</em><br>
 <strong>GPHY5970</strong> &mdash; Geophysical Journal Seminar <em>(2022S, 2022F, 2023F, 2024F)</em><br>
-<strong>GPHY3440</strong> &mdash; Mentored Research Experience <em>(2021S, 2022Su, 2023F)</em></p>
+<strong>GPHY3440</strong> &mdash; Mentored Research Experience <em>(2021S, 2022Su, 2023F, 2024Su, 2024F)</em></p>
 <p><!-- raw HTML omitted --><strong>Lower Undergraduate Level Courses</strong><!-- raw HTML omitted --></p>
 <p><strong>GEOL1114</strong> &mdash; Physical Geology for Scientists &amp; Engineers <em>(2020F, 2022S, 2024F)</em><br>
 <strong>GPHY3013</strong> &mdash; Data Analysis in Geoscience <em>(2023S)</em><br>
