--- a/teaching/index.html
+++ b/teaching/index.html
@@ -428,7 +428,7 @@
 
           <div class="article-style" itemprop="articleBody">
             <p><!-- raw HTML omitted --><strong>Graduate / Upper Undergraduate Level Courses</strong><!-- raw HTML omitted --></p>
-<p><!-- raw HTML omitted --><strong>GPHY5020 Computational Geophysics &ndash; 3 credits (2021S, 2023S)</strong> <!-- raw HTML omitted --><br>
+<p><!-- raw HTML omitted --><strong>GPHY5020 Computational Geophysics &ndash; 3 credits (2021S, 2023S, 2025S)</strong> <!-- raw HTML omitted --><br>
 Fundamental concepts of numerical modeling in solid Earth geophysics, including the mathematical formulation of finite difference (FDM) and finite element (FEM) methods and their applications in a range of geophysical problems such as the heat and fluid flow, deformation, and wave propagation. Students learn MATLAB/Python programming for these methods and review topics on computational methods in seismology, geomechanics, and geodynamics.</p>
 <p><!-- raw HTML omitted --><strong>GPHY5970 Remote Sensing &amp; Space Geodesy &ndash; 3 credits (2021F, 2023F)</strong> <!-- raw HTML omitted --><br>
 This course introduces fundamentals of remote sensing and geodetic techniques, including optical, radar, GNSS, InSAR, and related observations from current and upcoming satellite missions. Through case studies, the course covers basic geospatial analysis and parameter estimation approaches to characterize the properties and processes of land surface changes, geohazards, and resource exploration.</p>
@@ -436,7 +436,7 @@ This course introduces fundamentals of remote sensing and geodetic techniques, i
 This course presents an overview of seismology to introduce students to the fundamentals of seismic wave, quantitative data analyses, and the utilization of seismic wave for the study of earthquakes and the Earth&rsquo;s interior structure. Students will gain hand-on experiences with real data analysis.</p>
 <p><!-- raw HTML omitted --><strong>GPHY5413 Global Geophysics &ndash; 3 credits (2022F, 2023F, 2024F)</strong> <!-- raw HTML omitted --><br>
 Introduces students to geophysical methods, the structure and physical properties of earth&rsquo;s interior, active processes on earth, and the use of geophysical methods to study structure and processes.</p>
-<p><!-- raw HTML omitted --><strong>GPHY3440 Mentored Research Experience &ndash; 1&ndash;3 credits (2021S, 2022Su)</strong> <!-- raw HTML omitted --><br>
+<p><!-- raw HTML omitted --><strong>GPHY3440 Mentored Research Experience &ndash; 1&ndash;3 credits (2021S, 2022Su, 2023F, 2024Su, 2024F)</strong> <!-- raw HTML omitted --><br>
 For the inquisitive student to apply the scholarly processes of the discipline to a research or creative project under the mentorship of a faculty member.</p>
 <p><!-- raw HTML omitted --><strong>GPHY6970 Machine Learning in Geosciences Seminar &ndash; 1 credit (2021F; Co-Instructor)</strong> <!-- raw HTML omitted --><br>
 To introduce Geoscience students to the basic methods of machine learning in a seminar setting, with discussion and brainstorming of ideas.</p>
