Update 2025 recruitment information

--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -427,8 +427,8 @@
           <h1 itemprop="name">Research Opportunities</h1>
 
           <div class="article-style" itemprop="articleBody">
-            <p><!-- raw HTML omitted --><strong>2024 Fall Admission</strong> <!-- raw HTML omitted --></p>
-<p>Our group may recruit 1&ndash;2 MS/PhD graduate students <strong>only</strong> for the following research directions:</p>
+            <p><!-- raw HTML omitted --><strong>2025 Fall Admission</strong> <!-- raw HTML omitted --></p>
+<p>Our group may recruit <strong>one</strong> MS/PhD graduate student in either research area below:</p>
 <ol>
 <li>
 <p><strong>Geodetic Imaging and Modeling</strong>: Processing, modeling, and interpration of satellite-based InSAR/GNSS observations to characterize natural/anthropogenic near-surface/crustal processes and hazards. <em>Funding Sources</em>: NASA/NSF/OU.</p>
